[package]
name = "options-chain-renderer"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A terminal-based options chain visualization tool"

[dependencies]
# Terminal UI
tui = "0.19"
crossterm = "0.25"

# Serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# CLI arguments (optional)
clap = { version = "4.1", features = ["derive"] }

# Colorful terminal output
colored = "2.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true  # Automatically strip symbols from the binary
